# R-aliser-une-application-de-pr-vision-immobili-re

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.fastapi  Dockerfile.gradio  Dockerfile.mcp  GETTING_STARTED.md  GITHUB_ACTIONS_DEPLOYMENT_READY.md  README.md  SECURITY_SECRETS.md  dockerrun.bat  dvc.yaml  inventory.ini  main.py  playbook.yaml  pyproject.toml  requirements-fastapi.txt  requirements-gradio.txt  requirements-mcp.txt  requirements.txt  requirements_dev.txt  template.env  test.py  test.yaml  test_tool.py
.dvc/: config
.github/workflows/: build.yml  deploy-k3s.yml  docker-image.yml  python-tests.yml
TEMPLATE FASTAPI/: exemple_env  mainapp.py  readme.md  requirements.txt
data/: .gitignore  communes-france-2025.csv.dvc  test_clean_dvf.csv.dvc
docs/: benchmark projIA.md  note-cadrage projIA.md
experimentations/: runIA.py  tool_calling_direct_mistral.py
k3s/: DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  GITHUB_WORKFLOW_README.md
librairies/: datas_communes.py  datas_dvf.py
models/: GradBoostRegressor_pipeline.pkl  XGBRegressor_pipeline.pkl
notebook/: 01. analyse commune.ipynb  02. analyse dvf_file.ipynb  03. analyse_data_merged.ipynb  04. test_modele.ipynb  05. mlflow.ipynb  06. test des modeles.ipynb  06. test_modele.ipynb  analyse commune.ipynb  analyse dvf_file.ipynb
scripts/: .gitignore  clean_dvf.py  deploy-k3s.sh  model.py  prepare_communes_data.py  prepare_dvf_data.py  test_db.py  transform_csv_to_db.py  xgb_model.pkl
templates/: index.html
tests/: conftest.py  test_main.py
(+145 files in other folders)
