[project]
name = "r-aliser-une-application-de-pr-vision-immobili-re"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "dvc[ssh]>=3.66.1",
    "fastapi>=0.135.1",
    "fastmcp>=3.2.0",
    "gradio>=6.9.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mistralai>=1.1.1",
    "langgraph>=1.0.10",
    "langsmith>=0.7.14",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mistralai>=1.12.4",
    "mlflow>=3.10.1",
    "pandas>=2.3.3",
    "prefab-ui>=0.18.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tensorflow>=2.21.0",
    "transformers>=5.3.0",
    "uvicorn[standard]>=0.41.0",
    "xgboost>=3.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
